# Chess3D

./: .gitignore  CMakeLists.txt  README.md
assets/models/: bishop.mtl  king.mtl  pawn.mtl  queen.mtl  rook.mtl
assets/shaders/: chessboard.fragment  chessboard.vertex  pieces.fragment  pieces.vertex  shadowmapping.fragment  shadowmapping.vetrex  simple.fragmentshader  simple.vertexshader  smoke.fragment  smoke.vertex
src/Chess3D/: chess3d.cpp
src/Chess3D/common/: camera.cpp  camera.h  light.cpp  light.h  model.cpp  model.h  shader.cpp  skeleton.cpp  skeleton.h  texture.cpp
src/Chess3D/engine/: coord.cpp  coord.hpp  lookups.hpp  main.cpp.sandbox  move.cpp  move.hpp  piece.cpp  piece.hpp  piecetypes.hpp  position.cpp  position.hpp
